--- a/app/views/shared/_bottom_navigation.html.erb
+++ b/app/views/shared/_bottom_navigation.html.erb
@@ -9,8 +9,8 @@
       <% end %>
 
       <!-- ポスト -->
-      <%= link_to "#",
-          class: "flex flex-col items-center justify-center flex-1 h-full text-slate-600 hover:text-orange-500 transition-colors" do %>
+      <%= link_to (user_signed_in? ? select_shops_path : new_user_session_path),
+          class: "flex flex-col items-center justify-center flex-1 h-full text-slate-600 hover:text-orange-500 transition-colors #{current_page?(select_shops_path) ? 'text-orange-500' : ''}" do %>
         <%= image_tag "post_icon.svg", class: "w-6 h-6", alt: "ポスト" %>
         <span class="text-xs mt-1">ポスト</span>
       <% end %>
